<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ywg.simplereader.activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

</RelativeLayout>-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_head_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <com.ywg.simplereader.view.CircleImageView
                    android:id="@+id/iv_head_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/ic_profile"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="爱音乐的孩纸"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_nick_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick_name"
                android:textSize="18sp"
                android:layout_marginLeft="40dp"
                android:drawableLeft="@mipmap/ic_nick_name"/>

            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:text="爱音乐的孩纸"
                android:layout_marginRight="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_pwd"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textSize="18sp"
                android:layout_marginLeft="40dp"
                android:drawableLeft="@mipmap/ic_pwd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/pwd_edit"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="300dp"/>
    </LinearLayout>


</ScrollView>
